add reverse game mode

--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -11,6 +11,16 @@
     tools:context="com.bradleywilcox.simon.TestActivity">
 
     <Button
+        android:text="Reverse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/button"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="46dp"
+        android:id="@+id/btnStartReverse" />
+
+    <Button
         android:text="Green"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,12 +57,10 @@
         android:id="@+id/button4" />
 
     <Button
-        android:text="Start"
+        android:text="Normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/btnStart"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/button"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="46dp"
-        android:id="@+id/btnStart" />
+        android:layout_alignStart="@+id/btnStartReverse" />
 </RelativeLayout>
