--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_test"
     android:layout_width="match_parent"
@@ -8,66 +9,77 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/back"
     tools:context="com.bradleywilcox.simon.TestActivity">
-
-    <Button
-        android:text="Green"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="180dp"
-        android:id="@+id/button" />
-
-    <Button
-        android:text="Red"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/button"
-        android:layout_toEndOf="@+id/button"
-        android:layout_marginStart="36dp"
-        android:id="@+id/button2" />
-
-    <Button
-        android:text="Yellow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
-        android:layout_alignStart="@+id/button"
-        android:layout_marginTop="35dp"
-        android:id="@+id/button3" />
 
     <Button
         android:text="Blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button3"
-        android:layout_alignStart="@+id/button2"
-        android:id="@+id/button4" />
+        android:id="@+id/button4"
+        android:layout_alignBaseline="@+id/button3"
+        android:layout_alignBottom="@+id/button3"
+        android:layout_alignStart="@+id/button2" />
 
     <Button
-        android:text="Normal"
+        android:text="Yellow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnStart"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/btnStartReverse" />
+        android:layout_marginTop="76dp"
+        android:id="@+id/button3"
+        android:layout_below="@+id/button"
+        android:layout_alignStart="@+id/button" />
+
+    <Button
+        android:text="Red"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="37dp"
+        android:id="@+id/button2"
+        android:layout_above="@+id/button3"
+        android:layout_toEndOf="@+id/button" />
+
+    <Button
+        android:text="Green"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:id="@+id/button"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:text="Turbo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="62dp"
         android:id="@+id/btnStartTurbo"
-        android:layout_below="@+id/btnStartReverse"
-        android:layout_alignStart="@+id/button" />
+        android:layout_alignBaseline="@+id/button4"
+        android:layout_alignBottom="@+id/button4"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:text="Reverse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnStartReverse"
-        android:layout_below="@+id/btnStart"
-        android:layout_alignStart="@+id/btnStartTurbo" />
+        android:layout_above="@+id/button4"
+        android:layout_alignStart="@+id/btnStartTurbo"
+        android:layout_marginBottom="11dp" />
+
+    <Button
+        android:text="Normal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnStart"
+        android:layout_alignBaseline="@+id/button2"
+        android:layout_alignBottom="@+id/button2"
+        android:layout_alignStart="@+id/btnStartReverse" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/simon"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
