--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -82,4 +82,25 @@
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:text="Score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvScore"
+        android:textColor="@android:color/white"
+        android:layout_marginStart="32dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/imageView"
+        android:layout_marginBottom="17dp" />
+
+    <TextView
+        android:text="High Score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tvScore"
+        android:layout_toEndOf="@+id/btnStartTurbo"
+        android:layout_marginStart="19dp"
+        android:id="@+id/tvHighScore"
+        android:textColor="@android:color/white" />
 </RelativeLayout>
