--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -10,26 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/back"
-    tools:context="com.bradleywilcox.simon.TestActivity">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="150dp"
-        app:srcCompat="@drawable/simon"
-        android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:text="Score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvScore"
-        android:textColor="@android:color/white"
-        android:layout_marginStart="32dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/imageView"
-        android:layout_marginBottom="17dp" />
+    tools:context="com.bradleywilcox.simon.GameActivity">
 
 
     <RadioGroup
@@ -87,70 +68,80 @@
         android:layout_alignEnd="@+id/imageView"
         android:layout_marginEnd="28dp" />
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/yeldul"
-        android:background="@color/back"
-        android:id="@+id/imageButton4"
-        android:layout_below="@+id/imageButton"
-        android:layout_toStartOf="@+id/imageButton2" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/bludul"
-        android:id="@+id/imageButton3"
-        android:background="@color/back"
-        android:layout_below="@+id/imageButton2"
-        android:layout_alignEnd="@+id/imageButton2" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/grndul"
-        android:id="@+id/imageButton"
-        android:background="@color/back"
-        android:layout_marginStart="12dp"
-        android:layout_alignBottom="@+id/btnStart"
-        android:layout_alignStart="@+id/tvScore" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/reddul"
-        android:id="@+id/imageButton2"
-        android:background="@color/back"
-        android:layout_alignTop="@+id/imageButton"
-        android:layout_toEndOf="@+id/imageButton" />
-
     <Button
         android:text="Start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnStart"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="80dp"
         android:layout_below="@+id/radioGroup2"
         android:layout_centerHorizontal="true" />
 
-    <Button
-        android:text="Begin"
+    <TextView
+        android:text="Score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/imageButton"
-        android:layout_alignStart="@+id/btnStart"
-        android:layout_marginTop="16dp"
-        android:id="@+id/button6" />
+        android:id="@+id/tvScore"
+        android:textColor="@android:color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/radioGroup2" />
 
-    <Button
-        android:text="How To Play"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:id="@+id/button7"
-        android:layout_below="@+id/imageButton2"
+        app:srcCompat="@drawable/simon_small"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/btnStart"
+        android:layout_marginTop="25dp">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/grndul"
+            android:id="@+id/imageButton"
+            android:background="@color/back"
+             />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/yeldul"
+            android:background="@color/back"
+            android:id="@+id/imageButton4"
+            android:layout_below="@+id/imageButton"
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/reddul"
+            android:id="@+id/imageButton2"
+            android:background="@color/back"
+            android:layout_toRightOf="@+id/imageButton"
+            android:layout_alignTop="@+id/imageButton"
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/bludul"
+            android:id="@+id/imageButton3"
+            android:background="@color/back"
+            android:layout_below="@+id/imageButton2"
+            android:layout_toRightOf="@+id/imageButton4"
+
+            />
+    </RelativeLayout>
+
+
+
+
 
 
 </RelativeLayout>
