--- a/app/src/main/res/layout/howto.xml
+++ b/app/src/main/res/layout/howto.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/back">
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+   >
 
     <TextView
         android:text="How to Play Simon"
@@ -16,6 +21,7 @@
         android:textSize="25dp"
         android:textColorLink="@android:color/white" />
 
+
     <TextView
         android:text="@string/howto"
         android:layout_width="wrap_content"
@@ -25,6 +31,7 @@
         android:layout_marginTop="17dp"
         android:id="@+id/textView2"
         android:textColor="@android:color/background_light"
+        android:layout_marginBottom="50dp"
         android:textSize="18sp" />
 
     <Button
@@ -36,3 +43,4 @@
         android:layout_marginBottom="38dp"
         android:id="@+id/button5" />
 </RelativeLayout>
+</ScrollView>
